# asp

./: LICENSE  README.md
ros-pkg/core/: stack.xml
ros-pkg/core/agent/: CMakeLists.txt  mainpage.dox  manifest.xml
ros-pkg/core/agent/include/agent/: lockable.h
ros-pkg/core/agent/src/lib/: lockable.cpp
ros-pkg/core/asp/: CMakeLists.txt  mainpage.dox  manifest.xml
ros-pkg/core/asp/config/: asp_rgbd.yaml
ros-pkg/core/asp/include/asp/: asp.h  aspvis.h  rgbd.h  simple_segmentation_pipeline.h
ros-pkg/core/asp/src/lib/: asp.cpp  aspvis.cpp  rgbd.cpp
ros-pkg/core/asp/src/prog/: normal_estimation_experiment.cpp  simple_segmenter.cpp  train_simple_segmenter.cpp  visualize_rgbd.cpp
ros-pkg/core/asp/src/test/: test_asp.cpp
ros-pkg/core/dst/: CMakeLists.txt  manifest.xml
ros-pkg/core/dst/include/dst/: bilateral_npg.h  boundary_mask_node.h  canny_epg.h  cie-xyz-image-node.h  color_histogram_npg.h  compute_nodes.h  depth_epg.h  depth_epg_velodyne.h  depth_npg.h  depth_projector.h  distance_npg.h  edge_potential_aggregator.h  edge_potential_generator.h  edge_potential_product_epg.h  edge_potentials.h  entry_point.h  evaluator.h  flow_clustering_epg.h  foreground_kdtree_node.h  helper_functions.h  icp_npg.h  image_processing_nodes.h  kdtree_node.h  kinect_sequence.h  label_flow_npg.h  node_potential_aggregator.h  node_potentials.h  optical_flow_node.h  organized_surface_normal_node.h  patch_classifier.h  potentials_cache.h  prior_npg.h  realtime_interface.h  scene_alignment_node.h  scene_alignment_npg.h  seed_image_distance_npg.h  segmentation_pipeline.h  segmentation_visualizer.h  sequence_segmentation_solver.h  sequence_segmentation_view_controller.h  (+6 more)
ros-pkg/core/dst/src/lib/: bilateral_npg.cpp  boundary_mask_node.cpp  canny_epg.cpp  cie-xyz-image-node.cpp  color_delta_epg.cpp  color_histogram_npg.cpp  depth_epg.cpp  depth_epg_velodyne.cpp  depth_npg.cpp  depth_projector.cpp  distance_npg.cpp  edge_potential_aggregator.cpp  edge_potential_generator.cpp  edge_potential_product_epg.cpp  evaluator.cpp  flow_clustering_epg.cpp  foreground_kdtree_node.cpp  helper_functions.cpp  icp_npg.cpp  image_processing_nodes.cpp  kdtree_node.cpp  kinect_sequence.cpp  label_flow_npg.cpp  node_potential_aggregator.cpp  node_potential_generator.cpp  optical_flow_node.cpp  organized_surface_normal_node.cpp  patch_classifier.cpp  potentials_cache.cpp  prior_npg.cpp  realtime_interface.cpp  scene_alignment_node.cpp  scene_alignment_npg.cpp  seed_image_distance_npg.cpp  seed_npg.cpp  segmentation_pipeline.cpp  segmentation_visualizer.cpp  sequence_segmentation_view_controller.cpp  sobel-image-node.cpp  struct_svm.cpp  (+3 more)
ros-pkg/core/dst/src/program/: evaluate.cpp  evaluate_houghtrack.cpp  generate_houghtrack_input.cpp  generate_random_weights.cpp  image_cut.cpp  kinect_cut.cpp  kinect_cut_interactive.cpp  openni_viewer_simple.cpp  planar_image_cut.cpp  realtime_interface.cpp  segmentation_visualizer.cpp  sequence_stats.cpp  train.cpp  translate_sequence.cpp  variance.cpp
ros-pkg/core/dst/src/test/: test_maxflow.cpp
ros-pkg/core/graphcuts/: CMakeLists.txt  mainpage.dox  manifest.xml  test_model
ros-pkg/core/graphcuts/include/graphcuts/: maxflow_inference.h  model.h  potentials_cache.h  structural_svm.h  typedefs.h
ros-pkg/core/graphcuts/src/lib/: maxflow_inference.cpp  model.cpp  potentials_cache.cpp  structural_svm.cpp
ros-pkg/core/graphcuts/src/test/: test_graphcuts.cpp
ros-pkg/core/image_labeler/: CMakeLists.txt  manifest.xml
ros-pkg/core/image_labeler/include/image_labeler/: image_label_manager.h
ros-pkg/core/image_labeler/src/: cropped_image_viewer.cpp  dataset_viewer.cpp  dump_objects.cpp  image_label_manager.cpp  image_labeler_controller.cpp  label_sampler.cpp  oneoff_image_labeler_controller.cpp  opencv_view.cpp  test_image_label_manager.cpp
ros-pkg/core/openni2_interface/: CMakeLists.txt  mainpage.dox  manifest.xml
ros-pkg/core/openni2_interface/include/openni2_interface/: openni2_interface.h  openni_helpers.h  synchronizer.h
ros-pkg/core/openni2_interface/src/lib/: openni2_interface.cpp  openni_helpers.cpp
ros-pkg/core/openni2_interface/src/prog/: jittery_image_experiment.cpp  openni2_interface_test.cpp  openni_test.cpp  visualize.cpp
ros-pkg/core/pipeline3/: CMakeLists.txt  mainpage.dox  manifest.xml
ros-pkg/core/pipeline3/include/pipeline/: common.h  common_pods.h  example_pods.h  outlet.h  params.h  pipeline.h  pod.h  twiddler.h
ros-pkg/core/pipeline3/src/: common_nodes.cpp  example_pods.cpp  params.cpp  pipeline.cpp  pod.cpp  test_pipeline.cpp  test_twiddler.cpp  twiddler.cpp  yaml_experiment.cpp
ros-pkg/utility/bag_of_tricks/: CMakeLists.txt  manifest.xml
ros-pkg/utility/eigen_extensions/: CMakeLists.txt  manifest.xml
ros-pkg/utility/eigen_extensions/include/eigen_extensions/: eigen_extensions.h  random.h
ros-pkg/utility/eigen_extensions/src/: random.cpp  test_random.cpp
ros-pkg/utility/name_mapping/: CMakeLists.txt  manifest.xml  name_mappable_test
ros-pkg/utility/name_mapping/include/name_mapping/: common_name_mappables.h  name_mapping.h
ros-pkg/utility/name_mapping/src/lib/: common_name_mappables.cpp  name_mapping.cpp
ros-pkg/utility/name_mapping/src/test/: test_name_mapping.cpp
ros-pkg/utility/serializable/: CMakeLists.txt  manifest.xml
